--- a/Shivaji Creations/src/components/Employee/Employee.css
+++ b/Shivaji Creations/src/components/Employee/Employee.css
@@ -1,17 +1,3 @@
-import './App.css'
-import Home from './components/Home/Home'
-import Navbar from './components/Navbar/Nabar';
-import {Link, Outlet} from "react-router-dom";
-
-
-function App() {
-
-  return (
-    <>
-      <Navbar />
-      <Outlet />
-    </>
-  )
+div{
+  text-align: center;
 }
-
-export default App
